--- a/META.yml
+++ b/META.yml
@@ -4,7 +4,9 @@ author:
   - 'pawa <pawapawa@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.59
-  Test::More: 0.88
+  Test::Fatal: 0
+  Test::More: 0.98
+  Test::Warn: 0.2
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
@@ -22,13 +24,13 @@ no_index:
     - xt
 requires:
   Carp: 0
-  Lingua::JA::TFIDF: 0.04
-  Lingua::JA::WebIDF: 0
-  List::MoreUtils: 0
+  Lingua::JA::Halfwidth::Katakana: 0
+  Lingua::JA::WebIDF: 0.21
+  Text::MeCab: 0.20013
   parent: 0
   perl: 5.8.1
 resources:
   bugtracker: https://github.com/pawa-/Lingua-JA-TFWebIDF/issues
   license: http://dev.perl.org/licenses
   repository: https://github.com/pawa-/Lingua-JA-TFWebIDF
-version: 0.04
+version: 0.30
