Import of PAWAPAWA/Lingua-JA-TFWebIDF-0.36 from CPAN.
gitpan-cpan-distribution: Lingua-JA-TFWebIDF
gitpan-cpan-version:      0.36
gitpan-cpan-path:         PAWAPAWA/Lingua-JA-TFWebIDF-0.36.tar.gz
gitpan-cpan-author:       PAWAPAWA
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ build_requires:
   ExtUtils::MakeMaker: 6.59
   Test::Fatal: 0
   Test::More: 0.98
+  Test::Requires: 0
   Test::Warn: 0.2
 configure_requires:
   ExtUtils::MakeMaker: 6.59
@@ -33,4 +34,4 @@ resources:
   bugtracker: https://github.com/pawa-/Lingua-JA-TFWebIDF/issues
   license: http://dev.perl.org/licenses
   repository: https://github.com/pawa-/Lingua-JA-TFWebIDF
-version: 0.35
+version: 0.36
